5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/222/users/4076/executions/1668_2968.log
== TEST (2019-04-15 19:15:33) 
-- CODE:
float(int())
-- OUTPUT:
60.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 19:29:41) 
-- CODE:
float ( int ( escreva valor de "s" ) )
float ( int ( escreva valor de "l" ) )
float ( int ("quantidade s" ) )
float ( int ("quantidade l") )

-- ERROR:
File "XXXX", line 1
    float ( int ( escreva valor de "s" ) )
                              ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 19:38:46) 
-- CODE:
float ( int ( escreva valor de "s" ) )
float ( int ( escreva valor de "l" ) )
float ( int ("quantidade s" ) )
float ( int ("quantidade l") )
float ( int ( "quantidade de refrigerante" ))
-- ERROR:
File "XXXX", line 1
    float ( int ( escreva valor de "s" ) )
                              ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 19:39:27) 
-- CODE:
float ( int ( escreva valor de "s" ) )
float ( int ( escreva valor de "l" ) )
float ( int ("quantidade s" ) )
float ( int ("quantidade l") )
float ( int ( "quantidade de refrigerante" ))
total = valor de s e l
-- ERROR:
File "XXXX", line 1
    float ( int ( escreva valor de "s" ) )
                              ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 19:39:43) 
-- CODE:
float ( int ( escreva valor de "s" ) )
float ( int ( escreva valor de "l" ) )
float ( int ("quantidade s" ) )
float ( int ("quantidade l") )
float ( int ( "quantidade de refrigerante" ))
total = "valor de s e l"
-- ERROR:
File "XXXX", line 1
    float ( int ( escreva valor de "s" ) )
                              ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
